infrastructure/k8s/file-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bias-file-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bias-file-management
  template:
    metadata:
      labels:
        app: bias-file-management
    spec:
      containers:
        - name: file-management
          image: bias-file-management:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: file-management
spec:
  selector:
    app: bias-file-management
  ports:
    - port: 8002
      targetPort: 8002
