infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bias-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bias.internal
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: communicator
                port:
                  number: 8000
